--- a/index.html
+++ b/index.html
@@ -1,172 +1,205 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Online Recovery Score Calculator</title>
-    <style>
-      body {
-        font-family: Arial, sans-serif;
-        text-align: center;
-        margin: 40px;
-      }
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Online Recovery Score Calculator</title>
+  <style>
+    * {
+      box-sizing: border-box;
+    }
 
+    body {
+      font-family: Arial, sans-serif;
+      text-align: center;
+      margin: 20px;
+      padding: 0;
+    }
+
+    h1 {
+      margin-bottom: 20px;
+      font-size: 1.8em;
+    }
+
+    .options {
+      margin-bottom: 30px;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 10px;
+    }
+
+    select {
+      padding: 6px;
+      font-size: 1em;
+    }
+
+    .sliders-wrapper {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 30px;
+      margin-bottom: 40px;
+      width: 100%;
+    }
+
+    .slider-block {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      width: 100%;
+      max-width: 400px;
+    }
+
+    input[type="range"] {
+      width: 100%;
+      margin: 10px 0;
+    }
+
+    input[type="number"] {
+      width: 80px;
+      margin-top: 5px;
+      padding: 4px;
+      font-size: 1em;
+    }
+
+    .final-grade {
+      font-size: 1.5em;
+      font-weight: bold;
+      margin-bottom: 5px;
+    }
+
+    .max-grade-note {
+      font-size: 0.9em;
+      color: #666;
+    }
+
+    /* Mobile Responsive */
+    @media (max-width: 600px) {
       h1 {
-        margin-bottom: 20px;
+        font-size: 1.5em;
       }
 
       .options {
-        margin-bottom: 30px;
+        flex-direction: column;
+        align-items: center;
       }
 
       select {
-        padding: 5px;
-        margin: 0 10px;
-      }
-
-      .sliders-wrapper {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        gap: 30px;
-        margin-bottom: 40px;
+        width: 100%;
+        max-width: 300px;
       }
 
       .slider-block {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        width: 300px;
-      }
-
-      input[type="range"] {
-        width: 100%;
-        margin: 10px 0;
+        width: 90%;
       }
 
       input[type="number"] {
         width: 60px;
-        margin-top: 5px;
       }
+    }
+  </style>
+</head>
+<body>
 
-      .final-grade {
-        font-size: 1.5em;
-        font-weight: bold;
-        margin-bottom: 5px;
-      }
+  <h1>Online Recovery Score Calculator</h1>
 
-      .max-grade-note {
-        font-size: 0.9em;
-        color: #666;
-      }
-    </style>
-  </head>
-  <body>
-    <h1>Online Recovery Score Calculator</h1>
+  <div class="options">
+    <label for="courseType">Course Type:</label>
+    <select id="courseType">
+      <option value="regular">Regular (Non-AP)</option>
+      <option value="ap">AP / Honors / Math</option>
+    </select>
 
-    <div class="options">
-      <label for="courseType">Course Type:</label>
-      <select id="courseType">
-        <option value="regular">Regular (Non-AP)</option>
-        <option value="ap">AP / Honors / Math</option>
-      </select>
+    <label for="attempt">Attempt:</label>
+    <select id="attempt">
+      <option value="1">1st Attempt</option>
+      <option value="2">2nd Attempt</option>
+    </select>
+  </div>
 
-      <label for="attempt">Attempt:</label>
-      <select id="attempt">
-        <option value="1">1st Attempt</option>
-        <option value="2">2nd Attempt</option>
-      </select>
+  <div class="sliders-wrapper">
+    <div class="slider-block">
+      <label id="onlineLabel" for="onlineSlider">Online Course Grade (40%)</label>
+      <input type="range" id="onlineSlider" min="0" max="100" value="50" />
+      <input type="number" id="onlineInput" min="0" max="100" value="50" />
     </div>
 
-    <div class="sliders-wrapper">
-      <div class="slider-block">
-        <label id="onlineLabel" for="onlineSlider"
-          >Online Course Grade (40%)</label
-        >
-        <input type="range" id="onlineSlider" min="0" max="100" value="50" />
-        <input type="number" id="onlineInput" min="0" max="100" value="50" />
-      </div>
-
-      <div class="slider-block">
-        <label id="oldLabel" for="oldSlider">Old Course Grade (60%)</label>
-        <input type="range" id="oldSlider" min="0" max="100" value="50" />
-        <input type="number" id="oldInput" min="0" max="100" value="50" />
-      </div>
+    <div class="slider-block">
+      <label id="oldLabel" for="oldSlider">Old Course Grade (60%)</label>
+      <input type="range" id="oldSlider" min="0" max="100" value="50" />
+      <input type="number" id="oldInput" min="0" max="100" value="50" />
     </div>
+  </div>
 
-    <div class="final-grade">
-      Final Grade: <span id="finalGrade">50.0</span>
-    </div>
-    <div class="max-grade-note" id="maxGradeNote">
-      1st Attempt Max Grade is 83%
-    </div>
+  <div class="final-grade">
+    Final Grade: <span id="finalGrade">50.0</span>
+  </div>
+  <div class="max-grade-note" id="maxGradeNote">1st Attempt Max Grade is 83%</div>
 
-    <script>
-      const onlineSlider = document.getElementById("onlineSlider");
-      const oldSlider = document.getElementById("oldSlider");
-      const onlineInput = document.getElementById("onlineInput");
-      const oldInput = document.getElementById("oldInput");
-      const finalGradeDisplay = document.getElementById("finalGrade");
-      const courseType = document.getElementById("courseType");
-      const attempt = document.getElementById("attempt");
-      const onlineLabel = document.getElementById("onlineLabel");
-      const oldLabel = document.getElementById("oldLabel");
-      const maxGradeNote = document.getElementById("maxGradeNote");
+  <script>
+    const onlineSlider = document.getElementById('onlineSlider');
+    const oldSlider = document.getElementById('oldSlider');
+    const onlineInput = document.getElementById('onlineInput');
+    const oldInput = document.getElementById('oldInput');
+    const finalGradeDisplay = document.getElementById('finalGrade');
+    const courseType = document.getElementById('courseType');
+    const attempt = document.getElementById('attempt');
+    const onlineLabel = document.getElementById('onlineLabel');
+    const oldLabel = document.getElementById('oldLabel');
+    const maxGradeNote = document.getElementById('maxGradeNote');
 
-      function updateLabelsAndGrade() {
-        let oldWeight, onlineWeight, maxGrade;
+    function updateLabelsAndGrade() {
+      let oldWeight, onlineWeight, maxGrade;
 
-        if (courseType.value === "regular") {
-          oldWeight = 60;
-          onlineWeight = 40;
-        } else {
-          oldWeight = 65;
-          onlineWeight = 35;
-        }
-
-        // Update weight labels
-        oldLabel.textContent = `Old Course Grade (${oldWeight}%)`;
-        onlineLabel.textContent = `Online Course Grade (${onlineWeight}%)`;
-
-        // Calculate final grade
-        const old = parseFloat(oldSlider.value);
-        const online = parseFloat(onlineSlider.value);
-        let rawFinal = old * (oldWeight / 100) + online * (onlineWeight / 100);
-
-        // Apply cap based on attempt
-        if (attempt.value === "1") {
-          maxGrade = 83;
-          maxGradeNote.textContent = "1st Attempt Max Grade is 83%";
-        } else {
-          maxGrade = 80;
-          maxGradeNote.textContent = "2nd Attempt Max Grade is 80%";
-        }
-
-        if (rawFinal > maxGrade) rawFinal = maxGrade;
-
-        finalGradeDisplay.textContent = rawFinal.toFixed(1);
+      if (courseType.value === 'regular') {
+        oldWeight = 60;
+        onlineWeight = 40;
+      } else {
+        oldWeight = 65;
+        onlineWeight = 35;
       }
 
-      function sync(slider, input) {
-        slider.addEventListener("input", () => {
-          input.value = slider.value;
-          updateLabelsAndGrade();
-        });
+      oldLabel.textContent = `Old Course Grade (${oldWeight}%)`;
+      onlineLabel.textContent = `Online Course Grade (${onlineWeight}%)`;
 
-        input.addEventListener("input", () => {
-          let value = Math.min(Math.max(input.value, 0), 100);
-          input.value = value;
-          slider.value = value;
-          updateLabelsAndGrade();
-        });
+      const old = parseFloat(oldSlider.value);
+      const online = parseFloat(onlineSlider.value);
+      let rawFinal = old * (oldWeight / 100) + online * (onlineWeight / 100);
+
+      if (attempt.value === "1") {
+        maxGrade = 83;
+        maxGradeNote.textContent = "1st Attempt Max Grade is 83%";
+      } else {
+        maxGrade = 80;
+        maxGradeNote.textContent = "2nd Attempt Max Grade is 80%";
       }
 
-      // Event listeners for dropdowns
-      courseType.addEventListener("change", updateLabelsAndGrade);
-      attempt.addEventListener("change", updateLabelsAndGrade);
+      if (rawFinal > maxGrade) rawFinal = maxGrade;
+      finalGradeDisplay.textContent = rawFinal.toFixed(1);
+    }
 
-      sync(onlineSlider, onlineInput);
-      sync(oldSlider, oldInput);
-      updateLabelsAndGrade();
-    </script>
-  </body>
+    function sync(slider, input) {
+      slider.addEventListener('input', () => {
+        input.value = slider.value;
+        updateLabelsAndGrade();
+      });
+
+      input.addEventListener('input', () => {
+        let value = Math.min(Math.max(input.value, 0), 100);
+        input.value = value;
+        slider.value = value;
+        updateLabelsAndGrade();
+      });
+    }
+
+    courseType.addEventListener('change', updateLabelsAndGrade);
+    attempt.addEventListener('change', updateLabelsAndGrade);
+
+    sync(onlineSlider, onlineInput);
+    sync(oldSlider, oldInput);
+    updateLabelsAndGrade();
+  </script>
+
+</body>
 </html>
